--- a/week1/Modularizing_your_codes3.ipynb
+++ b/week1/Modularizing_your_codes3.ipynb
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f697d70f",
    "metadata": {},
    "outputs": [],
@@ -265,10 +265,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d659079a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 1: Creating student object...\n",
+      "Step 6: Ayo Daniel from Lagos is ready!\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# When you create an object, here's what happens:\n",
@@ -1640,7 +1649,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "benv (3.14.0)",
    "language": "python",
    "name": "python3"
   },
@@ -1654,7 +1663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
