--- a/week1/12_Introduction_to_training_a_model.ipynb
+++ b/week1/12_Introduction_to_training_a_model.ipynb
@@ -339,11 +339,13 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "model",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
